--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3DA5F5" />
     <meta name="msapplication-TileColor" content="#2d89ef" />
     <meta name="theme-color" content="#ffffff" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <i class="ic-community"></i>
+    <div class="container">
+      <div class="row">
+        <div class="tag-red">Badge</div>
+        <div class="tag-gray">무료배송</div>
+        <div class="tag-green">무료배송</div>
+      </div>
+    </div>
   </body>
 </html>
