--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="tag-red">Badge</div>
-        <div class="tag-gray">무료배송</div>
-        <div class="tag-green">무료배송</div>
+        <div>
+          <div class="tag-red">Badge</div>
+          <div class="tag-gray">무료배송</div>
+          <div class="tag-green">무료배송</div>
+        </div>
+        <div>
+          <div class="avatar-32">
+            <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" />
+          </div>
+          <div class="avatar-24">
+            <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" />
+          </div>
+        </div>
       </div>
     </div>
   </body>
