--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
 
                   <div class="my-menu ">
                     <button
-                      class="my-menu-button sm-hidden "
+                      class="my-menu-button is-active sm-hidden "
                       type="button"
                       aria-label="마이메뉴 열기 버튼"
                     >
-                      <div class="avatar-32">
+                      
                         <img
                           src="./assets/images/img-user-01.jpg"
                           alt="사딸라 아저씨"
                         />
-                      </div>
+                      
                     </button>
 
                     <div class="my-menu-content">
