--- a/index.html
+++ b/index.html
@@ -171,15 +171,15 @@
           <div class="avatar-24">
             <img src="./assets/images/img-user-01.jpg" alt="사달라 아저씨">
           </div>
-          <strong class="username">사달라</strong>
+          <strong class="username">사달라사달라사달라사달라사달라사달라사달라</strong>
         </a>
        </div>
   
         <!-- NOTE: 로그인을 하지 않은 경우 -->
-       <div class="sidebar-auth">
+       <!-- <div class="sidebar-auth">
         <a class="btn-40 btn-outlined" href="/">로그인</a>
         <a class="btn-40 btn-primary" href="/">회원가입</a> 
-       </div> 
+       </div>  -->
 
       </header>
 
