--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <li class="drawer-menu-item"><a href="/">스토어홈</a></li>
           <li class="drawer-menu-item"><a href="/">카테고리</a></li>
           <li class="drawer-menu-item"><a href="/">신혼가구</a></li>
-          <li>
+          <li class="drawer-menu-item">
             <a href="/">
               기획전
               <i class="ic-new" lang="en" aria-label="New"></i>
