--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                   />
                 </div>
 
+                
+
                 <!--  Note: 로그인을 한 경우 -->
                 <div class="button-group">
                   <button
@@ -103,7 +105,7 @@
 
                   <div class="my-menu sm-hidden ">
                     <button
-                      class="my-menu-button is-active sm-hidden"
+                      class="my-menu-button  sm-hidden"
 
                       type="button"
                       aria-label="마이메뉴 열기 버튼"
