🚧 Mark up product carousel component

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
+            
             <div class="breadcrumb">
               <a href="/">가전</a>
               <i class="ic-chevron" aria-hidden></i>
@@ -244,8 +245,62 @@
               <a href="/">전기히터</a>
               <i class="ic-chevron" aria-hidden></i>
             </div>
+
           </div>
         </div>
+      </div>
+
+      <div role="region">
+        <ol>
+          <li role="tappanel" aria-labelledby="product-carousel-tap-1">
+            <figure>
+              <img src="./assets/images/img-product-01.jpg" alt="">
+              <figcaption>보아르 전기히터 상세 이미지 1</figcaption>
+            </figure>
+          </li>
+          <li role="tappanel" aria-labelledby="product-carousel-tap-2">
+            <figure>
+              <img src="./assets/images/img-product-02.jpg" alt="">
+              <figcaption>보아르 전기히터 상세 이미지 2</figcaption>
+            </figure>
+          </li> 
+          <li role="tappanel" aria-labelledby="product-carousel-tap-3">
+            <figure>
+              <img src="./assets/images/img-product-03.jpg" alt="">
+              <figcaption>보아르 전기히터 상세 이미지 3</figcaption>
+            </figure>
+          </li> 
+          <li role="tappanel" aria-labelledby="product-carousel-tap-4">
+            <figure>
+              <img src="./assets/images/img-product-04.jpg" alt="">
+              <figcaption>보아르 전기히터 상세 이미지 4</figcaption>
+            </figure>
+          </li>
+        </ol>
+
+        <ol role="taplist">
+          <li role="tap" id="product-carousel-tap-1">
+            <button type="button">
+              <img src="./assets/images/img-product-01.jpg" alt="1번 이미지">
+            </button>
+          </li>
+          <li role="tap" id="product-carousel-tap-2">
+            <button type="button">
+              <img src="./assets/images/img-product-02.jpg" alt="2번 이미지">
+            </button>
+          </li>
+          <li role="tap" id="product-carousel-tap-3">
+            <button type="button">
+              <img src="./assets/images/img-product-03.jpg" alt="3번 이미지">
+            </button>
+          </li>
+          <li role="tap" id="product-carousel-tap-4">
+            <button type="button">
+              <img src="./assets/images/img-product-04.jpg" alt="4번 이미지">
+            </button>
+          </li>
+        </ol>
+
       </div>
 
     </main>
