--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
             <header class="product-info-header">
               <a class="info-brand" href="/">보아르</a>
-              <h1 class="info-title">캠핑/가정용 400W 미니멀 전기히터 VO-HT015 (안전장치기능탑재)</h1>
+              <h1 class="info-title">캠핑/가정용 400W 미니멀 전기히터 <br/> VO-HT015 (안전장치기능탑재)</h1>
 
               <div class="info-review">
                 <div class="star-rating-13">
@@ -301,12 +301,12 @@
             <div class="product-info-price">
               <div class="info-original-price">
                 <div class="discount-rate">
-                  <span>34</span>
-                  <span>%</span>
+                  <strong class="rate">34</strong>
+                  <span class="percent">%</span>
                 </div>
                 <div class="price-off">
                   <strong class="amount">49,900</strong>
-                  <span class="currency">원</span>
+                  <span class="currency sm-hidden">원</span>
                 </div>
               </div>
 
