--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
             <header class="product-info-header">
               <a class="info-brand" href="/">보아르</a>
-              <h1 class="info-title">캠핑/가정용 400W 미니멀 전기히터 <br/> VO-HT015 (안전장치기능탑재)</h1>
+              <h1 class="info-title">캠핑/가정용 400W 미니멀 전기히터 <br /> VO-HT015 (안전장치기능탑재)</h1>
 
               <div class="info-review">
                 <div class="star-rating-13">
@@ -298,7 +298,8 @@
               </div>
             </header>
 
-            <div class="product-info-price">
+            <!-- NOTE: 모바일용 가격 -->
+            <div class="product-info-price sm-only">
               <div class="info-original-price">
                 <div class="discount-rate">
                   <strong class="rate">34</strong>
@@ -317,6 +318,37 @@
                 </div>
                 <div>
                   <strong class="tag-red">특가</strong>
+                </div>
+              </div>
+
+              <p class="info-point">
+                <strong>987P</strong>
+                적립해드립니다. (VIP 3배 혜택 적용됨)
+              </p>
+            </div>
+
+            <!-- NOTE: 테블릿 이후 가격 -->
+            <div class="product-info-price sm-hidden">
+
+              <div class="info-price-wrapper">
+                <div class="discount-rate">
+                  <strong class="rate">34</strong>
+                  <span class="percent">%</span>
+                </div>
+
+                <div class="info-price">
+                  <div class="price-off">
+                    <strong class="amount">49,900</strong>
+                    <span class="currency">원</span>
+                  </div>
+
+                 <div class="info-sale-price">
+                  <div class="price-32">
+                    <strong class="amount">32,900</strong>
+                    <span class="currency">원</span>
+                  </div>
+                  <strong class="tag-red">특가</strong>
+                 </div>
                 </div>
               </div>
 
