--- a/components.html
+++ b/components.html
@@ -121,8 +121,8 @@
       </div>
 
       <div>
-        <div class="select-group">
-          <select class="form-select is-active">
+        <div class="select-group is-active">
+          <select class="form-select">
             <option value="1">선택사항 1</option>
             <option value="2">선택사항 2</option>
             <option value="3">선택사항 3</option>
