🐛 Change icon class in checkout-select

--- a/index.html
+++ b/index.html
@@ -413,17 +413,17 @@
                           <option value="4">4</option>
                           <option value="5">5</option>
                         </select>
-                        <i class="ic-chevron"></i>
+                        <i class="ic-caret" aria-hidden></i>
                       </div>
 
                       <output class="checkout-output" for="checkout-item-1">
                         <div class="price-16">
-                          <strong class="amount">32.900</strong>
+                          <strong class="amount">32,900</strong>
                           <span class="currency">원</span>
                         </div>
                       </output>
                     </footer>
-                    
+
                   </div>
                 </li>
               </ul>
