--- a/components.html
+++ b/components.html
@@ -155,6 +155,32 @@
           </button>
         </div>
       </div>
+
+      <div class="product-section-header">
+        <h1 class="title">섹션 타이틀</h1>
+      </div>
+
+      <div class="product-section-header">
+        <h1 class="title">섹션 타이틀</h1>
+        <strong class="badge" aria-label="0개">0</strong>
+        <a class="text-button" href="/">버튼</a>
+      </div>
+
+      <div class="product-section-header">
+        <h1 class="title">섹션 타이틀</h1>
+        <strong class="badge" aria-label="0개">0</strong>
+        <button class="icon-button" type="button" aria-label="더보기">
+          <i class="ic-chevron" aria-hidden></i>
+        </button>
+      </div>
+
+      <div class="product-section-header">
+        <h1 class="title">섹션 타이틀</h1>
+        <strong class="badge" aria-label="0개">0</strong>
+        <button class="icon-button is-right" type="button" aria-label="더보기">
+          <i class="ic-chevron" aria-hidden></i>
+        </button>
+      </div>
     </div>
   </body>
 </html>
