💄 Create a shared component: product-table

--- a/components.html
+++ b/components.html
@@ -181,6 +181,64 @@
           <i class="ic-chevron" aria-hidden></i>
         </button>
       </div>
+
+      <div>
+        <table class="product-table">
+          <tbody>
+            <tr>
+              <th scope="row">배송</th>
+              <td>일반택배</td>
+            </tr>
+            <tr>
+              <th scope="row">반품배송비</th>
+              <td>2,500원(최소 배송비가 무료인 경우 5,000원 부과)</td>
+            </tr>
+            <tr>
+              <th scope="row">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                adipisci aut id dolorem, iste doloribus tempora iure velit, vel
+                mollitia culpa eos nobis consequatur ad recusandae fugit vero
+                ducimus! Nisi ea, repellendus quod distinctio iste iure odit
+                saepe tempore! Molestias temporibus nulla quibusdam at debitis
+                dolorem magnam doloribus iste incidunt vero voluptatem accusamus
+                architecto accusantium nesciunt natus voluptatibus, nemo
+                adipisci magni maxime unde! Non rerum optio ea incidunt itaque,
+                cupiditate vero illo possimus blanditiis at delectus debitis
+                fugiat voluptatibus, id, quasi quam impedit fugit minus cumque
+                ab laboriosam! A provident incidunt velit et qui temporibus quam
+                laudantium voluptas dolores tenetur?
+              </th>
+              <td>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Deserunt aliquid dolorum ullam similique iure nesciunt,
+                doloremque explicabo ratione nisi veritatis pariatur. Dolorem
+                voluptas molestiae repudiandae corrupti expedita, iure, unde
+                sequi praesentium, rem ex consectetur quidem dicta amet itaque
+                nam odit officiis ab necessitatibus? Vitae molestiae nesciunt
+                deserunt provident non, facere iusto totam voluptatem eaque
+                saepe praesentium dolorum aliquam inventore ad eligendi dolores
+                at quasi consequatur vero eveniet voluptates id soluta corporis
+                nihil. Reiciendis ducimus incidunt ut atque rem quibusdam iure
+                molestiae facere tempore recusandae! Distinctio quaerat natus
+                corporis dolor saepe a, ipsam hic molestias! Reiciendis placeat
+                voluptatem illum quibusdam voluptatum corrupti nisi. Maiores
+                quibusdam aperiam at et rem corporis, beatae recusandae alias,
+                repellendus quae itaque cumque deserunt expedita totam ab porro
+                exercitationem? Pariatur magni consectetur excepturi eum, minima
+                sequi dicta ab eaque sit voluptatibus dolores hic? Sunt deserunt
+                provident, id aut voluptatum eligendi quisquam odit voluptatem
+                veritatis error vero atque nulla eius ipsum iure saepe
+                distinctio repellendus molestias illo fuga! Porro voluptatum in
+                temporibus, ut ab quae. Placeat animi, est dolore provident
+                repudiandae reiciendis. Explicabo ut quibusdam omnis cupiditate
+                ratione neque labore quia molestiae minus autem dolorem id
+                similique cumque veniam, nobis sit perspiciatis harum voluptate
+                dolor a! Accusamus, ab?
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </body>
 </html>
