--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
           </section>
 
-          <form class="order-form" action="/" method="POST">
+          <form class="order-form lg-only" action="/" method="POST">
             <div class="order-inputs">
               <div class="select-group is-active">
                 <select class="form-select" id="select-1" required>
