--- a/index.html
+++ b/index.html
@@ -455,35 +455,100 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4 col-lg-8">
-          
-          <ul class="product-tab-list" role="tablist">
-            <li class="product-tab-item is-active" role="tab" aria-labelledby="product-spec">
-              <button type="button">상품정보</button>
-            </li>
-            <li class="product-tab-item" role="tab" aria-labelledby="product-review">
-              <button type="button">리뷰
-                <strong class="badge" aria-label="566개 리뷰">566</strong>
-              </button>
-            </li>
-            <li class="product-tab-item" role="tab" aria-labelledby="product-inquiry">
-              <button type="button">문의
-              <strong class="badge" aria-label="96개 문의">96</strong>
-            </button>
-            </li>
-            <li class="product-tab-item" role="tab" aria-labelledby="product-shipment">
-              <button type="button">배송/환불</button>
-            </li>
-            <li class="product-tab-item" role="tab" aria-labelledby="product-recommendation">
-              <button type="button">추천</button>
-            </li>
-          </ul>
+
+            <ul class="product-tab-list" role="tablist">
+              <li class="product-tab-item is-active" role="tab" aria-labelledby="product-spec">
+                <button type="button">상품정보</button>
+              </li>
+              <li class="product-tab-item" role="tab" aria-labelledby="product-review">
+                <button type="button">리뷰
+                  <strong class="badge" aria-label="566개 리뷰">566</strong>
+                </button>
+              </li>
+              <li class="product-tab-item" role="tab" aria-labelledby="product-inquiry">
+                <button type="button">문의
+                  <strong class="badge" aria-label="96개 문의">96</strong>
+                </button>
+              </li>
+              <li class="product-tab-item" role="tab" aria-labelledby="product-shipment">
+                <button type="button">배송/환불</button>
+              </li>
+              <li class="product-tab-item" role="tab" aria-labelledby="product-recommendation">
+                <button type="button">추천</button>
+              </li>
+            </ul>
 
           </div>
         </div>
       </div>
     </div>
 
-  
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4 col-lg-8">
+          <section class="product-section product-spec" id="product-spec" role="tabpanel">
+            <div class="product-section-header">
+              <h1 class="title">상품 정보</h1>
+            </div>
+
+            <div class="product-section-content">
+              <div class="button-wrapper sm-only">
+                <button class="btn-primary btn-55" type="button">펼치기</button>
+              </div>
+              <figure>
+                <img src="./assets/images/img-detail-01.jpg" alt="">
+                <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 01</figcaption>
+              </figure>
+              <figure>
+                <img src="./assets/images/img-detail-02.jpg" alt="">
+                <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 02</figcaption>
+              </figure>
+              <figure>
+                <img src="./assets/images/img-detail-03.jpg" alt="">
+                <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 03</figcaption>
+              </figure>
+              <figure>
+                <img src="./assets/images/img-detail-04.jpg" alt="">
+                <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 04</figcaption>
+              </figure>
+              <figure>
+                <img src="./assets/images/img-detail-05.jpg" alt="">
+                <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 05</figcaption>
+              </figure>
+              <figure>
+                <img src="./assets/images/img-detail-06.jpg" alt="">
+                <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 06</figcaption>
+              </figure>
+
+              <table class="product-table">
+                <tbody>
+                  <tr>
+                    <th scope="row">품명 및 모델명</th>
+                    <td>VO-HT015</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">KC 인증 필 유무</th>
+                    <td>SU071586-19003</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">정격전압, 소비전력</th>
+                    <td>VAC220V, 60Hz, 400W</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">에너지소비효율등급</th>
+                    <td>해당사항없음</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </section>
+
+        </div>
+      </div>
+    </div>
+
+
+
 
   </main>
 
