--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4 col-lg-8">
+
           <section class="product-section product-spec" id="product-spec" role="tabpanel">
             <div class="product-section-header sm-hidden">
               <h1 class="title">상품 정보</h1>
@@ -542,6 +543,8 @@
               </table>
             </div>
           </section>
+
+          <div class="product-section-divider sm-only" aria-hidden></div>
 
         </div>
       </div>
